feat(mainPage): added card loading from API and implemented pagination

--- a/src/components/games/games.module.css
+++ b/src/components/games/games.module.css
@@ -3,3 +3,9 @@
     width: 100%;
     margin: 0 auto;
 }
+
+.paginationContainer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
