--- a/src/components/game-card/game-card.module.css
+++ b/src/components/game-card/game-card.module.css
@@ -1,8 +1,29 @@
 .gameCardContainer {
     position: relative;
-    width: 300px;
-    height: 450px;
+    width: 100%;
+    height: 200px;
+    border-radius: 10px; 
+    overflow: hidden; 
+}
+
+.gameCardTop {
+    height: 150px;
     overflow: hidden;
+    position: relative;
+    border-top-left-radius: 10px;  
+    border-top-right-radius: 10px;
+}
+
+.gameCardBottom {
+    height: 50px;
+    background: #22075e;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border-bottom-left-radius: 10px;  
+    border-bottom-right-radius: 10px;
 }
 
 .gameCardImage {
@@ -13,12 +34,8 @@
 }
 
 .gameCardTitle {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1;
-    color: white;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    transition: opacity 0.3s ease;
 }
 
 .gameCardInfo {
@@ -27,7 +44,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.4);
     color: white;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -37,42 +54,47 @@
     align-items: center;
 }
 
+.gameCardButton {
+    position: absolute;
+    font-size: 1.2em;
+    top: 0;
+    left: 0;
+    width: 100%;  
+    height: 100%; 
+    background: #22075e; 
+    color: white;
+    display: none; 
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;  
+    transition: background 0.3s ease;  
+}
+
+.gameCardInfoTable {
+    border-collapse: collapse;
+    width: 100%;
+    color: white;
+}
+
+.gameCardInfoTable td {
+    padding: 5px;
+    text-align: center;
+    border: none;
+}
+
+.gameCardInfoTable td:first-child {
+    font-weight: bold;
+}
+
+.gameCardContainer:hover .gameCardInfo,
+.gameCardContainer:hover .gameCardButton {
+    opacity: 1;
+    display: flex;
+}
+
+.gameCardContainer:hover .gameCardTitle,
 .gameCardContainer:hover .gameCardImage {
     opacity: 0.3;
 }
 
-.gameCardContainer:hover .gameCardInfo {
-    opacity: 1;
-}
 
-.gameCardButton {
-    margin-top: 10px;
-    background: #1890ff;
-    border: none;
-    color: white;
-    cursor: pointer;
-    padding: 10px 20px;
-    transition: background 0.3s ease;
-    text-align: center;
-    /* Указываем выравнивание текста по центру */
-    line-height: 1;
-    /* Устанавливаем line-height */
-    display: inline-flex;
-    /* Используем flexbox для выравнивания */
-    justify-content: center;
-    align-items: center;
-}
-
-.gameCardButton:hover {
-    background: #096dd9;
-}
-
-.gameCardInfoMeta {
-    display: flex;
-    align-items: center;
-    margin: 5px 0;
-}
-
-.gameCardInfoMeta span {
-    margin-left: 5px;
-}
