--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,8 +1,13 @@
 .header {
     background-color: #22075e;
     display: flex;
-    align-items: center;
     justify-content: center;
+}
+
+.appContainer {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .content {
@@ -16,15 +21,6 @@
     margin-top: auto;
 }
 
-.sider {
-    text-align: center;
-    line-height: 120px;
-    color: #fff;
-    background-color: #3ba0e9;
-}
-
-.appContainer {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.space {
+    width: 100%;
 }
