--- a/src/components/game-page/game-page.module.css
+++ b/src/components/game-page/game-page.module.css
@@ -1,3 +1,8 @@
+.container {
+    margin-top: 30px;
+    width: 1000px;
+}
+
 .alert {
     max-width: 300px;
     align-self: center;
@@ -10,6 +15,8 @@
 
 .carousel {
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     width: 1000px;
 }
 
@@ -20,4 +27,42 @@
 .screenshot {
     width: 100%;
     height: 100%;
+}
+
+.tables {
+    margin-top: 20px;
+}
+
+.button {
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+}
+
+.empty {
+    margin-top: 20px;
+}
+
+@media (max-width: 992px) {
+    .carousel {
+        width: 700px;
+    }
+}
+
+@media (max-width: 768px) {
+    .carousel {
+        width: 500px;
+    }
+}
+
+@media (max-width: 576px) {
+    .carousel {
+        width: 300px;
+    }
+}
+
+@media (max-width: 285px) {
+    .carousel {
+        width: 230px;
+    }
 }
