--- a/src/components/games/games.module.css
+++ b/src/components/games/games.module.css
@@ -1,9 +1,3 @@
-.gamesContainer {
-    max-width: 1000px;
-    width: 100%;
-    margin: 0 auto;
-}
-
 .paginationContainer {
     display: flex;
     justify-content: flex-end;
@@ -11,10 +5,11 @@
 }
 
 .alert {
-    max-width: 300px;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.banner {
-    padding: 40px 0;
-    text-align: center;
+.empty {
+    margin-top: 20%;
 }
