--- a/src/components/game-card/game-card.module.css
+++ b/src/components/game-card/game-card.module.css
@@ -4,6 +4,7 @@
     height: 200px;
     border-radius: 10px; 
     overflow: hidden; 
+    cursor: pointer;
 }
 
 .gameCardTop {
@@ -54,7 +55,7 @@
     align-items: center;
 }
 
-.gameCardButton {
+.gameCardClick {
     position: absolute;
     font-size: 1.2em;
     top: 0;
@@ -66,8 +67,6 @@
     display: none; 
     justify-content: center;
     align-items: center;
-    cursor: pointer;  
-    transition: background 0.3s ease;  
 }
 
 .gameCardInfoTable {
@@ -87,7 +86,7 @@
 }
 
 .gameCardContainer:hover .gameCardInfo,
-.gameCardContainer:hover .gameCardButton {
+.gameCardContainer:hover .gameCardClick {
     opacity: 1;
     display: flex;
 }
